Add notes for running with JDK17+